# adnmtf

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  VERSION.txt  __init__.py  chien.txt  cloudbuild.yml  install.bat  install.sh  irmfnmf.py  irmfpro.py  nmtf.code-workspace  publish.sh  pytest1.html  pytest2.html  requirements.txt  setup.cfg  setup.py  sudo-install.sh
.github/workflows/: pull-request.yml  push-pypi.yml  push-test.yml  push.yml
adnmtf/: __init__.py  _version.py  estimator.py  nmtf.py  nmtf_base.py  nmtf_core.py  nmtf_utils.py
docs/: estimator.html  index.html  nmtf.html  nmtf_base.html  nmtf_core.html  nmtf_utils.html
docs/nmtf/: index.html
modules/: __init__.py  nmtf.py  nmtf_base.py  nmtf_core.py  nmtf_utils.py  settings.py
nmtf/: __init__.py  _version.py  estimator.py  irmfnmf.py  irmfpro.py  nmtf.py  nmtf_base.py  nmtf_core.py  nmtf_utils.py
nmtf/modules/: __init__.py  nmtf.py  nmtf_base.py  nmtf_core.py  nmtf_utils.py  small_function.py
tests/: __init__.py
tests/data/: data_Tensor.csv  data_nmf_brunet.csv  data_nmf_nc1_corrmin0.9_corrmax0.1_noise0_RandNorms.csv  data_nmf_nc1_corrmin0.9_corrmax0.1_noise0_RandNorms_miss.csv  data_nmf_swimmer.csv  data_sntf.csv  datatest_W.csv  expected_data_nmf_brunet.json  expected_data_nmf_nc1_corrmin0.9_corrmax0.1_noise0_RandNorms.json  expected_data_nmf_nc1_corrmin0.9_corrmax0.1_noise0_RandNorms_miss.json  expected_result_data_nmf_swimmer.json  expected_result_nmf.json  expected_result_ntf.json  expected_result_ntf_old.json  expected_result_sntf.json  (+1 more)
(+15 files in other folders)
