[metadata]
name = adnmtf
description = Non-negative Matrix and Tensor Factorization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/adnmtf
author = Paul Fogel
author_email = pfogel@advestis.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/adnmtf/issues
    Documentation = https://advestis.github.io/adnmtf
    Source Code = https://github.com/Advestis/adnmtf/

[options]
packages = find:
install_requires =
    pandas
    numpy
    sklearn
    tqdm
    scipy
python_requires = >=3.6
include_package_data = True

[options.packages.find]
include = adnmtf

[versioneer]
VCS = git
style = pep440
versionfile_source = adnmtf/_version.py
versionfile_build = adnmtf/_version.py
tag_prefix = v
parentdir_prefix = adnmtf-
